--- a/c/index.html
+++ b/c/index.html
@@ -80,6 +80,9 @@
                   joonwonc <span class="emph">at</span> mit <span class="emph">dot</span> edu
                   || <span class="material-icons md-16">phone</span> +1-339-225-5940
                 </p>
+                <p><span class="material-icons md-16">article</span> <a href="./docs/cv.pdf">CV</a>
+                  || <span class="material-icons md-16">work</span>
+                  <a href="https://github.com/joonwonc">GitHub</a></p>
               </div>
             </div>
 
@@ -157,6 +160,22 @@
                     2020.</span>
                 </li>
               </ul>
+              <p class="p-subheading">Drafts</p>
+              <ul>
+                <li><span class="paper">Hemiola: A Framework for Structural Design and Proof of
+                  Cache-Coherence Protocols</span><br />
+                  <span class="author">Joonwon Choi</span>, Adam Chlipala.<br />
+                  <span class="conference">submitted</span>
+                </li>
+              </ul>
+              <ul>
+                <li><span class="paper">Integration Verification Across Software and Hardware for a
+                    Simple Embedded System</span><br />
+                  Andres Erbsen, Samuel Gruetter, <span class="author">Joonwon Choi</span>, Clark
+                  Wood, Adam Chlipala.<br />
+                  <span class="conference">submitted</span>
+                </li>
+              </ul>
             </div>
 
             <div id="awards" class="col-xs-12 col-sm-12 col-md-12">
@@ -193,26 +212,27 @@
 
           </div>
 
-          <div class="inner cover">
-            <script type="text/javascript">
-              var sc_project="11069616";
-              var sc_invisible="0";
-              var sc_security="6af2b505";
-              var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
-              document.write("<sc"+"ript type='text/javascript' src='" + scJsHost + "statcounter.com/counter/counter.js'></sc"+"ript>");
-            </script>
-            <noscript>
-              <div class="statcounter">
-                <a title="shopify traffic stats"
-                   href="http://statcounter.com/shopify/"
-                   target="_blank">
-                  <img class="statcounter"
-                       src="//c.statcounter.com/11069616/0/6af2b505/0/"
-                       alt="shopify traffic stats">
-                </a>
-              </div>
-            </noscript>
-          </div>
+          <!-- <div class="inner cover"> -->
+          <!--   <script type="text/javascript"> -->
+          <!--     var sc_project="11069616"; -->
+          <!--     var sc_invisible="0"; -->
+          <!--     var sc_security="6af2b505"; -->
+          <!--     var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www."); -->
+          <!--     document.write("<sc"+"ript type='text/javascript' src='" + scJsHost + "statcounter.com/counter/counter.js'></sc"+"ript>"); -->
+          <!--   </script> -->
+          <!--   <noscript> -->
+          <!--     <div class="statcounter"> -->
+          <!--       <a title="shopify traffic stats" -->
+          <!--          href="http://statcounter.com/shopify/" -->
+          <!--          target="_blank"> -->
+          <!--         <img class="statcounter" -->
+          <!--              src="//c.statcounter.com/11069616/0/6af2b505/0/" -->
+          <!--              alt="shopify traffic stats"> -->
+          <!--       </a> -->
+          <!--     </div> -->
+          <!--   </noscript> -->
+          <!-- </div> -->
+
         </div>
       </div>
     </div>
