--- a/c/index.html
+++ b/c/index.html
@@ -87,17 +87,18 @@
             </div>
 
             <div id="interests" class="col-xs-12 col-sm-12 col-md-12">
-              <p class="p-subheading">Research Interests</p>
-              <p>My current research interests are as follows:</p>
+              <p class="p-subheading">Research Projects</p>
+              <p>I have worked on formal verification of hardware using the
+                <a href="http://coq.inria.fr" target="_blank">Coq</a> proof assistant:</p>
               <ul>
-                <li><span class="emph">Hemiola</span>: structural design and proof of hierarchical
-                  cache-coherence protocols, based on serializability guarantee in message-passing
-                  systems.</li>
                 <li><span class="emph"><a href="http://plv.csail.mit.edu/kami"
-                  target="_blank">Kami</a></span>: a Coq framework to prove hardware components
-                  based on modularity.</li>
+                  target="_blank">Kami</a></span>: a framework to implement, specify, prove, and
+                  synthesize hardware components based on modularity.</li>
+                <li><span class="emph">Hemiola</span>: a framework for structural design and proof
+                  of hierarchical cache-coherence protocols based on serializability.</li>
                 <li><span class="emph">Lightbulb</span>: an end-to-end proof between hardware and
-                  software.</li>
+                  software; I have worked particularly on the correctness proof of a pipelined
+                  RISC-V processor.</li>
               </ul>
             </div>
 
@@ -124,13 +125,13 @@
                   [<a href="https://github.com/mit-plv/kami">github</a>]<br />
                   <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
                   Sherman, Adam Chlipala, and Arvind.<br />
-                  <span class="conference">Proceedings of the 22nd ACM SIGPLAN International
-                    Conference on Functional Programming (ICFP'17). September 2017.</span>
+                  <span class="conference">Proceedings of the ACM SIGPLAN International Conference
+                    on Functional Programming (ICFP'17). September 2017.</span>
                 </li>
               </ul>
               <ul>
                 <li><span class="paper">An Inlining Approach to Formal Hardware Semantics</span>
-                  [<a href="https://dspace.mit.edu/handle/1721.1/105576">paper</a>]<br />
+                  [<a href="https://dspace.mit.edu/handle/1721.1/105576">thesis</a>]<br />
                   <span class="author">Joonwon Choi</span><br />
                   <span class="conference">M.S. Thesis in Electrical Engineering and Computer
                     Science, Massachusetts Institute of Technology.</span><br />
@@ -142,9 +143,8 @@
                   Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark Dongyeon
                   Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon Choi</span>,
                   Chung-Kil Hur, and Kwangkeun Yi.<br />
-                  <span class="conference">Proceedings of the ACM SIGPLAN 2018
-                  Conference on Programming Language Design and Implementation (PLDI'18). June
-                  2018.</span>
+                  <span class="conference">Proceedings of the ACM SIGPLAN Conference on Programming
+                    Language Design and Implementation (PLDI'18). June 2018.</span>
                 </li>
               </ul>
               <ul>
@@ -155,8 +155,8 @@
                   Polubelova, Karthikeyan Bhargavan, Benjamin Beurdouche,
                   <span class="author">Joonwon Choi</span>, Antoine Delignat-Lavaud, Cédric Fournet,
                   Natalia Kulatova, Tahina Ramananandro, Aseem Rastogi, Nikhil Swamy, Christoph
-                  M. Wintersteiger, Santiago Zanella-Beguelin.<br />
-                  <span class="conference">IEEE Symposium on Security and Privacy (Oakland), May
+                  M. Wintersteiger, and Santiago Zanella-Beguelin.<br />
+                  <span class="conference">IEEE Symposium on Security and Privacy (SP'20), May
                     2020.</span>
                 </li>
               </ul>
@@ -164,16 +164,14 @@
               <ul>
                 <li><span class="paper">Hemiola: A Framework for Structural Design and Proof of
                   Cache-Coherence Protocols</span><br />
-                  <span class="author">Joonwon Choi</span>, Adam Chlipala.<br />
-                  <span class="conference">submitted</span>
+                  <span class="author">Joonwon Choi</span> and Adam Chlipala.<br />
                 </li>
               </ul>
               <ul>
                 <li><span class="paper">Integration Verification Across Software and Hardware for a
                     Simple Embedded System</span><br />
                   Andres Erbsen, Samuel Gruetter, <span class="author">Joonwon Choi</span>, Clark
-                  Wood, Adam Chlipala.<br />
-                  <span class="conference">submitted</span>
+                  Wood, and Adam Chlipala.<br />
                 </li>
               </ul>
             </div>
