Update the piano homepage

--- a/p/index.html
+++ b/p/index.html
@@ -15,7 +15,16 @@
 
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400|Open+Sans:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style type="text/css">
+      .author
+      { text-decoration:underline; }
+      .conference
+      { font-style:italic; }
+      .paper
+      { font-weight:bold; }
+    </style>
   </head>
 
   <body>
@@ -36,6 +45,12 @@
           </div>
 
           <div class="inner cover">
+            <br/>
+            <br/>
+            <br/>
+          </div>
+
+          <div class="inner cover">
             <div class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-heading">Joonwon Choi as an Amateur Pianist.</p>
               <br />
@@ -47,7 +62,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
               <p>Besides academic careers, Joonwon also pursues his musical careers as an amateur pianist.</p>
-              <p>He has studied piano performance for four years as an
+              <p>He studied piano performance for four years as an
                 <a href="http://mta.mit.edu/music/performance/emerson-program" target="_blank">MIT Emerson scholar</a>,
                 with the instructor <a href="http://necmusic.edu/faculty/marilyn-roth" target="_blank">Marilyn Roth</a>
                 in New England Conservatory.</p>
