--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
     <link href="./bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400|Open+Sans:300,400" rel="stylesheet">
+    <link href="./cover.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style type="text/css">
+      .author
+      { text-decoration:underline; }
+      .conference
+      { font-style:italic; }
+      .paper
+      { font-weight:bold; }
+    </style>
   </head>
 
   <body>
