--- a/p/media.html
+++ b/p/media.html
@@ -15,7 +15,16 @@
 
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400|Open+Sans:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style type="text/css">
+      .author
+      { text-decoration:underline; }
+      .conference
+      { font-style:italic; }
+      .paper
+      { font-weight:bold; }
+    </style>
   </head>
 
   <body>
