--- a/c/index.html
+++ b/c/index.html
@@ -40,8 +40,8 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="./index.html">Home</a></li>
-                  <li><a href="./index.html#interests">Interests</a></li>
                   <li><a href="./index.html#education">Education</a></li>
+                  <li><a href="./index.html#publication">Publication</a></li>
                   <li><a href="./index.html#awards">Awards</a></li>
                   <li><a href="./index.html#texperience">Experience</a></li>
                 </ul>
@@ -64,47 +64,46 @@
                 </p>
               </div>
               <div class="col-xs-12 col-sm-9 col-md-9">
-                <p>I'm a graduate student at MIT CSAIL, currently co-advised
-                  by <a href="http://adam.chlipala.net" target="_blank">Adam Chlipala</a>
+                <p>I'm a formal-verification engineer at <a href="https://www.apple.com/">Apple</a>,
+                  working on verifying memory subsystems. Before that, I completed a PhD in computer
+                  science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net"
+                  target="_blank">Adam Chlipala</a>
                   and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
-                  My research interests include formal verification for any computer systems that
-                  are hard to believe to be correct. I'm an advocate of mechanized proofs; I like to
-                  prove something with <a href="http://coq.inria.fr" target="_blank">Coq</a>. I
-                  don't believe things not proven.
+                  During my PhD, I worked on formal verification of hardware using
+                  the <a href="http://coq.inria.fr" target="_blank">Coq</a> interactive theorem
+                  prover:
+                  <ul>
+                    <li><a href="https://github.com/mit-plv/kami">Kami</a>: a framework to
+                      implement, specify, prove, and synthesize hardware components based on
+                      modularity.</li>
+                    <li><a href="https://github.com/mit-plv/hemiola">Hemiola</a>: a framework for
+                      structural design and proof of hierarchical cache-coherence protocols based on
+                      serializability.</li>
+                    <li><a href="https://github.com/mit-plv/bedrock2/">Lightbulb</a>: an end-to-end
+                      proof between hardware and software; I worked particularly on the correctness
+                      proof of a pipelined RISC-V processor designed in Kami.</li>
+                  </ul>
                 </p>
-                <p><span class="material-icons md-16">business</span>
-                  <a href="http://www.csail.mit.edu/sites/default/files/resources/maps/8G/G888.gif"
-                     target="_blank">32-G888</a>, Stata Center, 32 Vassar St, Cambridge, MA 02139
-                </p>
+                <!-- <p><span class="material-icons md-16">business</span> -->
+                <!--   <a href="http://www.csail.mit.edu/sites/default/files/resources/maps/8G/G888.gif" -->
+                <!--      target="_blank">32-G888</a>, Stata Center, 32 Vassar St, Cambridge, MA 02139 -->
+                <!-- </p> -->
                 <p><span class="material-icons md-16">email</span>
                   joonwonc <span class="emph">at</span> mit <span class="emph">dot</span> edu
                   || <span class="material-icons md-16">phone</span> +1-339-225-5940
-                </p>
-                <p><span class="material-icons md-16">article</span> <a href="./docs/cv.pdf">CV</a>
+                  || <span class="material-icons md-16">article</span> <a href="./docs/cv.pdf">CV</a>
                   || <span class="material-icons md-16">work</span>
                   <a href="https://github.com/joonwonc">GitHub</a></p>
               </div>
             </div>
 
-            <div id="interests" class="col-xs-12 col-sm-12 col-md-12">
-              <p class="p-subheading">Research Projects</p>
-              <p>I have worked on formal verification of hardware using the
-                <a href="http://coq.inria.fr" target="_blank">Coq</a> proof assistant:</p>
-              <ul>
-                <li><span class="emph"><a href="http://plv.csail.mit.edu/kami"
-                  target="_blank">Kami</a></span>: a framework to implement, specify, prove, and
-                  synthesize hardware components based on modularity.</li>
-                <li><span class="emph">Hemiola</span>: a framework for structural design and proof
-                  of hierarchical cache-coherence protocols based on serializability.</li>
-                <li><span class="emph">Lightbulb</span>: an end-to-end proof between hardware and
-                  software; I have worked particularly on the correctness proof of a pipelined
-                  RISC-V processor.</li>
-              </ul>
-            </div>
-
             <div id="education" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Education</p>
               <ul>
+                <li>Feb 2021, Ph.D., <a href="http://eecs.mit.edu" target="_blank">Electrical
+                    Engineering and Computer Science</a>, <a href="http://mit.edu" target="_blank">
+                    Massachusetts Institute of Technology</a>
+                </li>
                 <li>Jun 2016, M.S., <a href="http://eecs.mit.edu" target="_blank">Electrical
                     Engineering and Computer Science</a>, <a href="http://mit.edu" target="_blank">
                     Massachusetts Institute of Technology</a></li>
@@ -112,7 +111,6 @@
                     target="_blank"> Department of Computer Science and
                     Engineering</a>, <a href="http://www.useoul.edu/" target="_blank"> Seoul
                     National University</a><br/>(Double major in Mathematics)</li>
-                <li>Feb 2006, graduated from Incheon Science High School</li>
               </ul>
             </div>
 
@@ -130,6 +128,15 @@
                 </li>
               </ul>
               <ul>
+                <li><span class="paper">Structural Design and Proof of Hierarchical Cache-Coherence
+                    Protocols</span>
+                  [<a href="http://adam.chlipala.net/theses/joonwonc.pdf">thesis</a>]<br />
+                  <span class="author">Joonwon Choi</span><br />
+                  <span class="conference">Ph.D. Thesis in Electrical Engineering and Computer
+                    Science, Massachusetts Institute of Technology.</span><br />
+                </li>
+              </ul>
+              <ul>
                 <li><span class="paper">An Inlining Approach to Formal Hardware Semantics</span>
                   [<a href="https://dspace.mit.edu/handle/1721.1/105576">thesis</a>]<br />
                   <span class="author">Joonwon Choi</span><br />
@@ -138,13 +145,12 @@
                 </li>
               </ul>
               <ul>
-                <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span>
-                  [<a href="https://dl.acm.org/citation.cfm?id=3192377">paper</a>]<br /> Jeehoon
-                  Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark Dongyeon
-                  Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon Choi</span>,
-                  Chung-Kil Hur, and Kwangkeun Yi.<br />
-                  <span class="conference">Proceedings of the ACM SIGPLAN Conference on Programming
-                    Language Design and Implementation (PLDI'18). June 2018.</span>
+                <li><span class="paper">Integration Verification Across Software and Hardware for a
+                    Simple Embedded System</span><br />
+                  Andres Erbsen, Samuel Gruetter, <span class="author">Joonwon Choi</span>, Clark
+                  Wood, and Adam Chlipala.<br />
+                  <span class="conference">To appear in the ACM SIGPLAN Conference on Programming
+                    Language Design and Implementation (PLDI'21). June 2021.</span>
                 </li>
               </ul>
               <ul>
@@ -160,18 +166,21 @@
                     2020.</span>
                 </li>
               </ul>
+              <ul>
+                <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span>
+                  [<a href="https://dl.acm.org/citation.cfm?id=3192377">paper</a>]<br /> Jeehoon
+                  Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark Dongyeon
+                  Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon Choi</span>,
+                  Chung-Kil Hur, and Kwangkeun Yi.<br />
+                  <span class="conference">Proceedings of the ACM SIGPLAN Conference on Programming
+                    Language Design and Implementation (PLDI'18). June 2018.</span>
+                </li>
+              </ul>
               <p class="p-subheading">Drafts</p>
               <ul>
                 <li><span class="paper">Hemiola: A Framework for Structural Design and Proof of
                   Cache-Coherence Protocols</span><br />
                   <span class="author">Joonwon Choi</span> and Adam Chlipala.<br />
-                </li>
-              </ul>
-              <ul>
-                <li><span class="paper">Integration Verification Across Software and Hardware for a
-                    Simple Embedded System</span><br />
-                  Andres Erbsen, Samuel Gruetter, <span class="author">Joonwon Choi</span>, Clark
-                  Wood, and Adam Chlipala.<br />
                 </li>
               </ul>
             </div>
@@ -200,6 +209,7 @@
             <div id="wexperience" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Work Experience</p>
               <ul>
+                <li>Mar 2021 - Current, Formal Verification Engineer, Apple</li>
                 <li>Jul 2018 - Sep 2018, Research Intern, Microsoft Research Cambridge</li>
                 <li>Apr 2009 - Oct 2011, Software Engineer, allm Games (Skilled Industry
                   Personnel)</li>
