--- a/c/index.html
+++ b/c/index.html
@@ -89,11 +89,12 @@
                 <!--      target="_blank">32-G888</a>, Stata Center, 32 Vassar St, Cambridge, MA 02139 -->
                 <!-- </p> -->
                 <p><span class="material-icons md-16">email</span>
-                  joonwonc <span class="emph">at</span> mit <span class="emph">dot</span> edu
+                  joonwonc <span class="emph">at</span> (mit <span class="emph">dot</span> edu | apple <span class="emph">dot</span> com)
                   || <span class="material-icons md-16">phone</span> +1-339-225-5940
-                  || <span class="material-icons md-16">article</span> <a href="./docs/cv.pdf">CV</a>
-                  || <span class="material-icons md-16">work</span>
-                  <a href="https://github.com/joonwonc">GitHub</a></p>
+                </p>
+                <p><span class="material-icons md-16">article</span> <a href="./docs/cv.pdf">CV</a>
+                  || <span class="material-icons md-16">work</span><a href="https://github.com/joonwonc">GitHub</a>
+                </p>
               </div>
             </div>
 
@@ -130,7 +131,7 @@
               <ul>
                 <li><span class="paper">Structural Design and Proof of Hierarchical Cache-Coherence
                     Protocols</span>
-                  [<a href="http://adam.chlipala.net/theses/joonwonc.pdf">thesis</a>]<br />
+                  [<a href="https://dspace.mit.edu/handle/1721.1/130759">thesis</a>]<br />
                   <span class="author">Joonwon Choi</span><br />
                   <span class="conference">Ph.D. Thesis in Electrical Engineering and Computer
                     Science, Massachusetts Institute of Technology.</span><br />
