Update the lightbulb paper link

--- a/c/index.html
+++ b/c/index.html
@@ -147,7 +147,8 @@
               </ul>
               <ul>
                 <li><span class="paper">Integration Verification Across Software and Hardware for a
-                    Simple Embedded System</span><br />
+                    Simple Embedded System</span>
+                  [<a href="https://dl.acm.org/doi/abs/10.1145/3453483.3454065">paper</a>]<br />
                   Andres Erbsen, Samuel Gruetter, <span class="author">Joonwon Choi</span>, Clark
                   Wood, and Adam Chlipala.<br />
                   <span class="conference">To appear in the ACM SIGPLAN Conference on Programming
