--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="cover-container">
           <div class="inner cover">
             <p class="p-heading">Joonwon Choi as</p>
-	    <p class="p-subheading"><a href="./c/index.html">a Graduate Student at MIT</a></p>
+	    <p class="p-subheading"><a href="./c/index.html">a Formal Verification Engineer at Apple</a></p>
 	    <p class="p-subheading"><a href="./p/index.html">an Amateur Pianist</a></p>
           </div>
         </div>
