--- a/c/index.html
+++ b/c/index.html
@@ -85,7 +85,7 @@
                   </ul>
                 </p>
                 <p><span class="material-icons md-16">email</span>
-                  joonwonc <span class="emph">at</span> (mit <span class="emph">dot</span> edu | apple <span class="emph">dot</span> com)
+                  joonwonc <span class="emph">at</span> apple <span class="emph">dot</span> com
                   || <span class="material-icons md-16">phone</span> +1-339-225-5940
                 </p>
                 <p><span class="material-icons md-16">article</span> <a href="./docs/cv.pdf">CV</a>
@@ -116,7 +116,7 @@
               <ul>
                 <li><span class="paper">Kami: A Platform for High-Level Parametric Hardware
                     Specification and its Modular Verification</span>
-                  [<a href="https://dl.acm.org/citation.cfm?id=3110268">paper</a>]
+                  [<a href="https://dl.acm.org/doi/10.1145/3110268">paper</a>]
                   [<a href="https://github.com/mit-plv/kami">github</a>]<br />
                   <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
                   Sherman, Adam Chlipala, and Arvind.<br />
@@ -166,7 +166,7 @@
               </ul>
               <ul>
                 <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span>
-                  [<a href="https://dl.acm.org/citation.cfm?id=3192377">paper</a>]<br /> Jeehoon
+                  [<a href="https://dl.acm.org/doi/10.1145/3192366.3192377">paper</a>]<br /> Jeehoon
                   Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark Dongyeon
                   Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon Choi</span>,
                   Chung-Kil Hur, and Kwangkeun Yi.<br />
@@ -205,7 +205,6 @@
                 <li>Apr 2009 - Oct 2011, Software Engineer, allm Games (Skilled Industry
                   Personnel)</li>
                 <li>Jan 2009 - Apr 2009, Software Engineering Intern(SWE), Google Korea</li>
-                <li>Jul 2007 - Aug 2007, Intern, SK Communications</li>
               </ul>
             </div>
 
