--- a/c/index.html
+++ b/c/index.html
@@ -114,14 +114,12 @@
             <div id="publication" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Publication</p>
               <ul>
-                <li><span class="paper">Kami: A Platform for High-Level Parametric Hardware
-                    Specification and its Modular Verification</span>
-                  [<a href="https://dl.acm.org/doi/10.1145/3110268">paper</a>]
-                  [<a href="https://github.com/mit-plv/kami">github</a>]<br />
-                  <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
-                  Sherman, Adam Chlipala, and Arvind.<br />
-                  <span class="conference">Proceedings of the ACM SIGPLAN International Conference
-                    on Functional Programming (ICFP'17). September 2017.</span>
+                <li><span class="paper">Hemiola: A DSL and Verification Tools to Guide Design and
+                    Proof of Hierarchical Cache-Coherence Protocols</span>
+                  [<a href="https://github.com/mit-plv/hemiola">github</a>]<br />
+                  <span class="author">Joonwon Choi</span>, Adam Chlipala, and Arvind.<br />
+                  <span class="conference">To appear in International Conference on Computer-Aided
+                    Verification (CAV'22). August 2022.</span>
                 </li>
               </ul>
               <ul>
@@ -134,21 +132,24 @@
                 </li>
               </ul>
               <ul>
-                <li><span class="paper">An Inlining Approach to Formal Hardware Semantics</span>
-                  [<a href="https://dspace.mit.edu/handle/1721.1/105576">thesis</a>]<br />
-                  <span class="author">Joonwon Choi</span><br />
-                  <span class="conference">M.S. Thesis in Electrical Engineering and Computer
-                    Science, Massachusetts Institute of Technology.</span><br />
-                </li>
-              </ul>
-              <ul>
                 <li><span class="paper">Integration Verification Across Software and Hardware for a
                     Simple Embedded System</span>
                   [<a href="https://dl.acm.org/doi/abs/10.1145/3453483.3454065">paper</a>]<br />
                   Andres Erbsen, Samuel Gruetter, <span class="author">Joonwon Choi</span>, Clark
                   Wood, and Adam Chlipala.<br />
-                  <span class="conference">To appear in the ACM SIGPLAN Conference on Programming
+                  <span class="conference">Proceedings of the ACM SIGPLAN Conference on Programming
                     Language Design and Implementation (PLDI'21). June 2021.</span>
+                </li>
+              </ul>
+              <ul>
+                <li><span class="paper">Kami: A Platform for High-Level Parametric Hardware
+                    Specification and its Modular Verification</span>
+                  [<a href="https://dl.acm.org/doi/10.1145/3110268">paper</a>]
+                  [<a href="https://github.com/mit-plv/kami">github</a>]<br />
+                  <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
+                  Sherman, Adam Chlipala, and Arvind.<br />
+                  <span class="conference">Proceedings of the ACM SIGPLAN International Conference
+                    on Functional Programming (ICFP'17). September 2017.</span>
                 </li>
               </ul>
               <ul>
@@ -172,6 +173,14 @@
                   Chung-Kil Hur, and Kwangkeun Yi.<br />
                   <span class="conference">Proceedings of the ACM SIGPLAN Conference on Programming
                     Language Design and Implementation (PLDI'18). June 2018.</span>
+                </li>
+              </ul>
+              <ul>
+                <li><span class="paper">An Inlining Approach to Formal Hardware Semantics</span>
+                  [<a href="https://dspace.mit.edu/handle/1721.1/105576">thesis</a>]<br />
+                  <span class="author">Joonwon Choi</span><br />
+                  <span class="conference">M.S. Thesis in Electrical Engineering and Computer
+                    Science, Massachusetts Institute of Technology.</span><br />
                 </li>
               </ul>
             </div>
