--- a/c/index.html
+++ b/c/index.html
@@ -85,7 +85,8 @@
                   </ul>
                 </p>
                 <p><span class="material-icons md-16">email</span>
-                  joonwonc <span class="emph">at</span> apple <span class="emph">dot</span> com
+                  joonwonc <span class="emph">at</span> alum <span class="emph">dot</span>
+                  mit <span class="emph">dot</span> edu
                   || <span class="material-icons md-16">phone</span> +1-339-225-5940
                 </p>
                 <p><span class="material-icons md-16">article</span> <a href="./docs/cv.pdf">CV</a>
