--- a/c/index.html
+++ b/c/index.html
@@ -73,13 +73,13 @@
                   the <a href="http://coq.inria.fr" target="_blank">Coq</a> interactive theorem
                   prover:
                   <ul>
-                    <li><a href="https://github.com/mit-plv/kami">Kami</a>: a framework to
+                    <li><a href="https://github.com/mit-plv/kami" target="_blank">Kami</a>: a framework to
                       implement, specify, prove, and synthesize hardware components based on
                       modularity.</li>
-                    <li><a href="https://github.com/mit-plv/hemiola">Hemiola</a>: a framework for
+                    <li><a href="https://github.com/mit-plv/hemiola" target="_blank">Hemiola</a>: a framework for
                       structural design and proof of hierarchical cache-coherence protocols based on
                       serializability.</li>
-                    <li><a href="https://github.com/mit-plv/bedrock2/">Lightbulb</a>: an end-to-end
+                    <li><a href="https://github.com/mit-plv/bedrock2/" target="_blank">Lightbulb</a>: an end-to-end
                       proof between hardware and software; I worked particularly on the correctness
                       proof of a pipelined RISC-V processor designed in Kami.</li>
                   </ul>
@@ -89,8 +89,8 @@
                   mit <span class="emph">dot</span> edu
                   || <span class="material-icons md-16">phone</span> +1-339-225-5940
                 </p>
-                <p><span class="material-icons md-16">article</span> <a href="./docs/cv.pdf">CV</a>
-                  || <span class="material-icons md-16">work</span><a href="https://github.com/joonwonc">GitHub</a>
+                <p><span class="material-icons md-16">article</span> <a href="./docs/cv.pdf" target="_blank">CV</a>
+                  || <span class="material-icons md-16">work</span><a href="https://github.com/joonwonc" target="_blank">GitHub</a>
                 </p>
               </div>
             </div>
@@ -117,16 +117,18 @@
               <ul>
                 <li><span class="paper">Hemiola: A DSL and Verification Tools to Guide Design and
                     Proof of Hierarchical Cache-Coherence Protocols</span>
-                  [<a href="https://github.com/mit-plv/hemiola">github</a>]<br />
+                  [<a href="https://link.springer.com/chapter/10.1007/978-3-031-13188-2_16" target="_blank">paper</a>]
+                  [<a href="https://www.youtube.com/watch?v=gUPjsFc5hD4" target="_blank">presentation</a>]
+                  [<a href="https://github.com/mit-plv/hemiola" target="_blank">github</a>]<br />
                   <span class="author">Joonwon Choi</span>, Adam Chlipala, and Arvind.<br />
-                  <span class="conference">To appear in International Conference on Computer-Aided
+                  <span class="conference">Proceedings of the International Conference on Computer-Aided
                     Verification (CAV'22). August 2022.</span>
                 </li>
               </ul>
               <ul>
                 <li><span class="paper">Structural Design and Proof of Hierarchical Cache-Coherence
                     Protocols</span>
-                  [<a href="https://dspace.mit.edu/handle/1721.1/130759">thesis</a>]<br />
+                  [<a href="https://dspace.mit.edu/handle/1721.1/130759" target="_blank">thesis</a>]<br />
                   <span class="author">Joonwon Choi</span><br />
                   <span class="conference">Ph.D. Thesis in Electrical Engineering and Computer
                     Science, Massachusetts Institute of Technology.</span><br />
@@ -135,7 +137,7 @@
               <ul>
                 <li><span class="paper">Integration Verification Across Software and Hardware for a
                     Simple Embedded System</span>
-                  [<a href="https://dl.acm.org/doi/abs/10.1145/3453483.3454065">paper</a>]<br />
+                  [<a href="https://dl.acm.org/doi/abs/10.1145/3453483.3454065" target="_blank">paper</a>]<br />
                   Andres Erbsen, Samuel Gruetter, <span class="author">Joonwon Choi</span>, Clark
                   Wood, and Adam Chlipala.<br />
                   <span class="conference">Proceedings of the ACM SIGPLAN Conference on Programming
@@ -145,8 +147,8 @@
               <ul>
                 <li><span class="paper">Kami: A Platform for High-Level Parametric Hardware
                     Specification and its Modular Verification</span>
-                  [<a href="https://dl.acm.org/doi/10.1145/3110268">paper</a>]
-                  [<a href="https://github.com/mit-plv/kami">github</a>]<br />
+                  [<a href="https://dl.acm.org/doi/10.1145/3110268" target="_blank">paper</a>]
+                  [<a href="https://github.com/mit-plv/kami" target="_blank">github</a>]<br />
                   <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
                   Sherman, Adam Chlipala, and Arvind.<br />
                   <span class="conference">Proceedings of the ACM SIGPLAN International Conference
@@ -156,7 +158,7 @@
               <ul>
                 <li><span class="paper">EverCrypt: A Fast, Verified, Cross-Platform Cryptographic
                     Provider</span>
-                  [<a href="https://ieeexplore.ieee.org/document/9152808">paper</a>]<br />
+                  [<a href="https://ieeexplore.ieee.org/document/9152808" target="_blank">paper</a>]<br />
                   Jonathan Protzenko, Bryan Parno, Aymeric Fromherz, Chris Hawblitzel, Marina
                   Polubelova, Karthikeyan Bhargavan, Benjamin Beurdouche,
                   <span class="author">Joonwon Choi</span>, Antoine Delignat-Lavaud, Cédric Fournet,
@@ -168,7 +170,7 @@
               </ul>
               <ul>
                 <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span>
-                  [<a href="https://dl.acm.org/doi/10.1145/3192366.3192377">paper</a>]<br /> Jeehoon
+                  [<a href="https://dl.acm.org/doi/10.1145/3192366.3192377" target="_blank">paper</a>]<br /> Jeehoon
                   Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark Dongyeon
                   Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon Choi</span>,
                   Chung-Kil Hur, and Kwangkeun Yi.<br />
@@ -178,7 +180,7 @@
               </ul>
               <ul>
                 <li><span class="paper">An Inlining Approach to Formal Hardware Semantics</span>
-                  [<a href="https://dspace.mit.edu/handle/1721.1/105576">thesis</a>]<br />
+                  [<a href="https://dspace.mit.edu/handle/1721.1/105576" target="_blank">thesis</a>]<br />
                   <span class="author">Joonwon Choi</span><br />
                   <span class="conference">M.S. Thesis in Electrical Engineering and Computer
                     Science, Massachusetts Institute of Technology.</span><br />
@@ -200,9 +202,9 @@
               <p class="p-subheading">Teaching Experience</p>
               <ul>
                 <li>Spring 2017, Teaching Assistant, MIT 6.887:
-                  <a href="http://adam.chlipala.net/frap/">Formal Reasoning About Programs</a></li>
+                  <a href="http://adam.chlipala.net/frap/" target="_blank">Formal Reasoning About Programs</a></li>
                 <li>Fall 2013, Teaching Assistant, SNU 4190.310:
-                  <a href="http://ropas.snu.ac.kr/~kwang/4190.310/13/">Programming
+                  <a href="http://ropas.snu.ac.kr/~kwang/4190.310/13/" target="_blank">Programming
                   Languages</a></li>
               </ul>
             </div>
