--- a/c/index.html
+++ b/c/index.html
@@ -115,6 +115,12 @@
             <div id="publication" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Publication</p>
               <ul>
+                <li><span class="paper">Formal Semantics of Verilog, Revisited for Deductive Verification: A Coq-Embedded Verification Framework as a Use Case</span><br />
+                  <span class="author">Joonwon Choi</span><br />
+                  <span class="conference">submitted.</span>
+                </li>
+              </ul>
+              <ul>
                 <li><span class="paper">Hemiola: A DSL and Verification Tools to Guide Design and
                     Proof of Hierarchical Cache-Coherence Protocols</span>
                   [<a href="https://link.springer.com/chapter/10.1007/978-3-031-13188-2_16" target="_blank">paper</a>]
