--- a/c/index.html
+++ b/c/index.html
@@ -58,14 +58,14 @@
           <div class="inner cover">
             <div id="home">
               <p class="p-heading">Joonwon Choi</p>
-              <div class="col-xs-12 col-sm-3 col-md-3">
+              <div class="col-xs-12 col-sm-4 col-md-4">
                 <p align="center">
-                  <img src="../images/profilec_2.jpg" width="200" alt="Profile"/>
+                  <img src="../images/profilec_3.png" width="240" alt="Profile"/>
                 </p>
               </div>
-              <div class="col-xs-12 col-sm-9 col-md-9">
-                <p>I'm a formal-verification engineer at <a href="https://www.apple.com/">Apple</a>,
-                  working on verifying memory subsystems. Before that, I completed a PhD in computer
+              <div class="col-xs-12 col-sm-8 col-md-8">
+                <p>I'm a senior Formal Verification Engineer at <a href="https://www.apple.com/">Apple</a>,
+                  working on verifying Apple SoCs. Before that, I completed a PhD in computer
                   science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net"
                   target="_blank">Adam Chlipala</a>
                   and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
@@ -116,6 +116,7 @@
               <p class="p-subheading">Publication</p>
               <ul>
                 <li><span class="paper">Formal Semantics of Verilog, Revisited for Deductive Verification: A Coq-Embedded Verification Framework as a Use Case</span><br />
+                  [<a href="./docs/pfv-draft.pdf" target="_blank">draft</a>]<br />
                   <span class="author">Joonwon Choi</span><br />
                   <span class="conference">submitted.</span>
                 </li>
