--- a/c/index.html
+++ b/c/index.html
@@ -115,9 +115,7 @@
             <div id="publication" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Publication</p>
               <ul>
-                <li><span class="paper">Formal Semantics of Verilog, Revisited for Deductive Verification: A Coq-Embedded Verification Framework as a Use Case</span><br />
-                  [<a href="./docs/pfv-draft.pdf" target="_blank">draft</a>]<br />
-                  <span class="author">Joonwon Choi</span><br />
+                <li><span class="paper">Efficient and Compositional Deductive Verification of Hardware Designs at the Register-Transfer Level</span><br />
                   <span class="conference">submitted.</span>
                 </li>
               </ul>
