--- a/c/index.html
+++ b/c/index.html
@@ -42,8 +42,8 @@
                   <li><a href="./index.html">Home</a></li>
                   <li><a href="./index.html#education">Education</a></li>
                   <li><a href="./index.html#publication">Publication</a></li>
+                  <li><a href="./index.html#wexperience">Experience</a></li>
                   <li><a href="./index.html#awards">Awards</a></li>
-                  <li><a href="./index.html#texperience">Experience</a></li>
                 </ul>
               </nav>
             </div>
@@ -65,8 +65,8 @@
               </div>
               <div class="col-xs-12 col-sm-8 col-md-8">
                 <p>I'm a senior Formal Verification Engineer at <a href="https://www.apple.com/">Apple</a>,
-                  working on verifying Apple SoCs. Before that, I completed a PhD in computer
-                  science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net"
+                  working on verifying memory subsystems and fabrics in Apple silicon. Before that, I completed
+                  a PhD in computer science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net"
                   target="_blank">Adam Chlipala</a>
                   and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
                   During my PhD, I worked on formal verification of hardware using
@@ -115,7 +115,8 @@
             <div id="publication" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Publication</p>
               <ul>
-                <li><span class="paper">Efficient and Compositional Deductive Verification of Hardware Designs at the Register-Transfer Level</span><br />
+                <li><span class="paper">Revamping the Formal Semantics of Verilog for Efficient, Modular,
+                    and Foundational Verification</span><br />
                   <span class="conference">submitted.</span>
                 </li>
               </ul>
@@ -193,13 +194,14 @@
               </ul>
             </div>
 
-            <div id="awards" class="col-xs-12 col-sm-12 col-md-12">
-              <p class="p-subheading">Awards and Honors</p>
+            <div id="wexperience" class="col-xs-12 col-sm-12 col-md-12">
+              <p class="p-subheading">Work Experience</p>
               <ul>
-                <li>Sep 2014 - May 2019, Kwanjeong Educational Fellowship</li>
-                <li>Sep 2014 - May 2018, MIT Emerson Scholarship for Private Music Study</li>
-                <li>Feb 2013, Top Honor (summa cum laude) Certification</li>
-                <li>Mar 2006 - Feb 2013, Presidential Science Scholarship</li>
+                <li>Mar 2021 - Current, Formal Verification Engineer, Apple</li>
+                <li>Jul 2018 - Sep 2018, Research Intern, Microsoft Research Cambridge</li>
+                <li>Apr 2009 - Oct 2011, Software Engineer, allm Games (Skilled Industry
+                  Personnel)</li>
+                <li>Jan 2009 - Apr 2009, Software Engineering Intern(SWE), Google Korea</li>
               </ul>
             </div>
 
@@ -214,14 +216,20 @@
               </ul>
             </div>
 
-            <div id="wexperience" class="col-xs-12 col-sm-12 col-md-12">
-              <p class="p-subheading">Work Experience</p>
+            <div id="aexperience" class="col-xs-12 col-sm-12 col-md-12">
+              <p class="p-subheading">Academic Services</p>
               <ul>
-                <li>Mar 2021 - Current, Formal Verification Engineer, Apple</li>
-                <li>Jul 2018 - Sep 2018, Research Intern, Microsoft Research Cambridge</li>
-                <li>Apr 2009 - Oct 2011, Software Engineer, allm Games (Skilled Industry
-                  Personnel)</li>
-                <li>Jan 2009 - Apr 2009, Software Engineering Intern(SWE), Google Korea</li>
+                <li>Program Committee: VSTTE 2024, PLDI 2024, CAV 2020 AE</li>
+              </ul>
+            </div>
+
+            <div id="awards" class="col-xs-12 col-sm-12 col-md-12">
+              <p class="p-subheading">Awards and Honors</p>
+              <ul>
+                <li>Sep 2014 - May 2019, Kwanjeong Educational Fellowship</li>
+                <li>Sep 2014 - May 2018, MIT Emerson Scholarship for Private Music Study</li>
+                <li>Feb 2013, Top Honor (summa cum laude) Certification</li>
+                <li>Mar 2006 - Feb 2013, Presidential Science Scholarship</li>
               </ul>
             </div>
 
