--- a/c/index.html
+++ b/c/index.html
@@ -64,8 +64,8 @@
                 </p>
               </div>
               <div class="col-xs-12 col-sm-8 col-md-8">
-                <p>I'm a Formal Verification Engineer at <a href="https://www.apple.com/">Apple</a>,
-                  working on verifying memory subsystems and fabrics in Apple silicon. Before that, I completed
+                <p>I'm a Formal Verification Tech Lead at <a href="https://www.apple.com/">Apple</a>,
+                  working on verifying memory subsystems and fabric interconnects in Apple silicon. Before that, I completed
                   a PhD in computer science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net"
                   target="_blank">Adam Chlipala</a>
                   and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
@@ -115,7 +115,7 @@
             <div id="publication" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Publication</p>
               <ul>
-                <li><span class="paper">Revamping Verilog Semantics for Foundational Verification</span>><br />
+                <li><span class="paper">Revamping Verilog Semantics for Foundational Verification</span><br />
                   <span class="conference">submitted.</span>
                 </li>
               </ul>
