--- a/c/index.html
+++ b/c/index.html
@@ -64,25 +64,10 @@
                 </p>
               </div>
               <div class="col-xs-12 col-sm-8 col-md-8">
-                <p>I'm a Formal Verification Tech Lead at <a href="https://www.apple.com/">Apple</a>,
-                  working on verifying memory subsystems and fabric interconnects in Apple silicon. Before that, I completed
-                  a PhD in computer science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net"
-                  target="_blank">Adam Chlipala</a>
-                  and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
-                  During my PhD, I worked on formal verification of hardware using
-                  the <a href="http://coq.inria.fr" target="_blank">Coq</a> interactive theorem
-                  prover:
-                  <ul>
-                    <li><a href="https://github.com/mit-plv/kami" target="_blank">Kami</a>: a framework to
-                      implement, specify, prove, and synthesize hardware components based on
-                      modularity.</li>
-                    <li><a href="https://github.com/mit-plv/hemiola" target="_blank">Hemiola</a>: a framework for
-                      structural design and proof of hierarchical cache-coherence protocols based on
-                      serializability.</li>
-                    <li><a href="https://github.com/mit-plv/bedrock2/" target="_blank">Lightbulb</a>: an end-to-end
-                      proof between hardware and software; I worked particularly on the correctness
-                      proof of a pipelined RISC-V processor designed in Kami.</li>
-                  </ul>
+                <p>I'm an Applied Scientist at <a href="https://aws.amazon.com/" target="_blank">Amazon Web Services (AWS)</a>, working on verifying the <a href="https://awsdocs-neuron.readthedocs-hosted.com/en/latest/compiler/index.html" target="_blank">Neuron Compiler</a>.
+                  Before that, I worked as a Formal Verification Tech Lead at <a href="https://www.apple.com/" target="_blank">Apple</a>, working on verifying memory subsystems and fabric interconnects in Apple silicon.
+                  I completed a PhD in computer science at MIT CSAIL co-advised by <a href="http://adam.chlipala.net" target="_blank">Adam Chlipala</a> and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
+                  During my PhD, I worked on formal verification of hardware using the Coq interactive theorem prover.
                 </p>
                 <p><span class="material-icons md-16">email</span>
                   joonwonc <span class="emph">at</span> alum <span class="emph">dot</span>
@@ -196,11 +181,11 @@
             <div id="wexperience" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Work Experience</p>
               <ul>
-                <li>Mar 2021 - Current, Formal Verification Engineer, Apple</li>
+                <li>Apr 2025 - Current, Senior Applied Scientist, AWS</li>
+                <li>Mar 2021 - Apr 2025, Formal Verification Tech Lead, Apple</li>
                 <li>Jul 2018 - Sep 2018, Research Intern, Microsoft Research Cambridge</li>
-                <li>Apr 2009 - Oct 2011, Software Engineer, allm Games (Skilled Industry
-                  Personnel)</li>
-                <li>Jan 2009 - Apr 2009, Software Engineering Intern(SWE), Google Korea</li>
+                <li>Apr 2009 - Oct 2011, Software Engineer, allm Games (Skilled Industry Personnel)</li>
+                <li>Jan 2009 - Apr 2009, SWE Intern, Google Korea</li>
               </ul>
             </div>
 
